--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
+    "@firebase/testing": "^0.20.11",
     "@nuxtjs/tailwindcss": "^1.0.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
